[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Ship2-open.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Ship.gd" type="Script" id=2]
[ext_resource path="res://Assets/ship2_w_death.png" type="Texture" id=4]
[ext_resource path="res://Assets/sounds/mouthLazer.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/ship2-dual-lazer.png" type="Texture" id=6]
[ext_resource path="res://Scripts/ShipCamera.gd" type="Script" id=7]
[ext_resource path="res://Assets/sounds/enemy_hit.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/sounds/ship_lazer.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/wobble.png" type="Texture" id=10]
[ext_resource path="res://Assets/touch_button_right.png" type="Texture" id=11]
[ext_resource path="res://Assets/touch_button_left.png" type="Texture" id=12]
[ext_resource path="res://Assets/ship_shield.png" type="Texture" id=13]
[ext_resource path="res://Scripts/Shield.gd" type="Script" id=14]
[ext_resource path="res://Scripts/Drones.gd" type="Script" id=15]
[ext_resource path="res://Actors/ship/Weapon.gd" type="Script" id=18]

[sub_resource type="Animation" id=1]
resource_name = "Death"
length = 0.96
tracks/0/type = "value"
tracks/0/path = NodePath("ShipDeathSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=2]
resource_name = "open"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 21.98
height = 12.3251

[sub_resource type="Animation" id=4]
resource_name = "shoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.82, -1.47 ), Vector2( 4.82, -1.47 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 50.0

[sub_resource type="Animation" id=6]
loop = true
step = 0.05

[sub_resource type="Animation" id=7]
length = 0.7
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.54902 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Ship" type="KinematicBody2D"]
position = Vector2( 0, 8 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2.4 )
rotation = 1.5708
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
vframes = 3
hframes = 3
frame = 1

[node name="ShipDeathSprite" type="Sprite" parent="."]
visible = false
rotation = 1.5708
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 4 )
vframes = 4
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/Death = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="ShipCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -6.39522, 0.307654 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="ShipCamera" type="Camera2D" parent="."]
current = true
limit_left = -1050
limit_top = -300
limit_right = 1050
limit_bottom = 300
editor_draw_drag_margin = true
script = ExtResource( 7 )

[node name="Reset_cam_timer" type="Timer" parent="ShipCamera"]
wait_time = 0.02

[node name="Tween" type="Tween" parent="ShipCamera"]

[node name="Weapon" type="Node2D" parent="."]
position = Vector2( 4.82, -1.47 )
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Weapon"]
position = Vector2( -4.8836, 1.37352 )
rotation = 1.5708
scale = Vector2( 1.2, 1.2 )
z_index = -1
texture = ExtResource( 6 )

[node name="Muzzle2" type="Position2D" parent="Weapon"]
position = Vector2( 21.3909, -7.02762 )

[node name="Muzzle" type="Position2D" parent="Weapon"]
position = Vector2( 21.3871, 6.29646 )

[node name="ShotTimer" type="Timer" parent="Weapon/Muzzle"]
wait_time = 0.25

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]
anims/shoot = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Weapon"]
stream = ExtResource( 5 )
volume_db = 1.0
pitch_scale = 0.95

[node name="HpRegenTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HitTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DeathExplosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 4.0

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="MobileControls" type="CanvasLayer" parent="."]

[node name="Left" type="TouchScreenButton" parent="MobileControls"]
position = Vector2( 0, 448 )
normal = ExtResource( 12 )
action = "left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="MobileControls"]
position = Vector2( 72, 448 )
normal = ExtResource( 11 )
action = "right"
visibility_mode = 1

[node name="Fire" type="TouchScreenButton" parent="MobileControls"]
position = Vector2( 1160, 512 )
scale = Vector2( 6, 6 )
normal = ExtResource( 10 )
action = "click"
visibility_mode = 1

[node name="Shield" type="KinematicBody2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.989219 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 14 )

[node name="ShieldTimer" type="Timer" parent="Shield"]
wait_time = 0.5

[node name="Sprite" type="Sprite" parent="Shield"]
rotation = 1.5708
texture = ExtResource( 13 )
vframes = 3
hframes = 3
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
position = Vector2( -9.53674e-07, 0 )
shape = SubResource( 5 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Shield"]
autoplay = "Wave"
anims/Wave = SubResource( 6 )

[node name="Tween" type="Tween" parent="Shield"]

[node name="ShieldCooldownTimer" type="Timer" parent="Shield"]
wait_time = 0.001
one_shot = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Shield"]
autoplay = "rotate"
anims/rotate = SubResource( 7 )

[node name="Drones" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="ReleaseTimer" type="Timer" parent="Drones"]
wait_time = 0.2

[node name="Cooldown" type="Timer" parent="Drones"]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="ShipCamera/Reset_cam_timer" to="ShipCamera" method="_on_Reset_cam_timer_timeout"]
[connection signal="timeout" from="Weapon/Muzzle/ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="HpRegenTimer" to="." method="_on_HpRegenTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="Shield/ShieldTimer" to="Shield" method="_on_ShieldTimer_timeout"]
[connection signal="timeout" from="Shield/ShieldCooldownTimer" to="Shield" method="_on_ShieldCooldownTimer_timeout"]
[connection signal="timeout" from="Drones/ReleaseTimer" to="Drones" method="_on_ReleaseTimer_timeout"]
[connection signal="timeout" from="Drones/Cooldown" to="Drones" method="_on_Cooldown_timeout"]
